--- a/hybrid.html
+++ b/hybrid.html
@@ -63,7 +63,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <li class="nav-item">
-                            <a class="nav-link" href="home.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <a class="nav-link" href="aboutus.html">About</a>
                     </li>
